most HTML done. Rendered API data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "colorful-comments.highlightPlainText": true
+  "colorful-comments.highlightPlainText": true,
+  "liveServer.settings.port": 5501
 }
